--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "echo 'No build step needed'",
+    "migrate": "node scripts/migrate.js",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "migrate": "node scripts/migrate.js",
-    "prepare": "husky install",
-    "build": "next build"
+    "prepare": "husky install"
   },
   "keywords": [
     "services",
