Configuration Vercel finalisée

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,29 @@
-# Configuration de la base de données
-DATABASE_URL=postgresql://username:password@host:port/sereko_db
-DATABASE_SSL=true
+# Configuration Générale
+NODE_ENV=development
+PORT=3000
 
-# Configuration Firebase
-FIREBASE_PROJECT_ID=your_firebase_project_id
-FIREBASE_PRIVATE_KEY=your_firebase_private_key
-FIREBASE_CLIENT_EMAIL=your_firebase_client_email
+# Base de Données
+DATABASE_URL=postgresql://username:password@localhost:5432/sereko
 
-# Configuration Paystack
-PAYSTACK_SECRET_KEY=your_paystack_secret_key
-PAYSTACK_PUBLIC_KEY=your_paystack_public_key
+# Firebase
+FIREBASE_PROJECT_ID=sereko-api
+FIREBASE_PRIVATE_KEY=votre_clé_privée_firebase
+FIREBASE_CLIENT_EMAIL=firebase-adminsdk@sereko-api.iam.gserviceaccount.com
 
-# Configuration Email
+# Wave Payment
+WAVE_API_KEY=votre_clé_api_wave
+WAVE_MERCHANT_ID=votre_identifiant_marchand
+WAVE_WEBHOOK_SECRET=votre_secret_webhook
+
+# Paystack (conservé pour référence)
+PAYSTACK_SECRET_KEY=votre_clé_secrète_paystack
+PAYSTACK_PUBLIC_KEY=votre_clé_publique_paystack
+
+# Authentification
+JWT_SECRET=votre_secret_jwt_tres_long_et_complexe
+
+# Email
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_email_password
-
-# Configuration JWT
-JWT_SECRET=your_very_long_and_secure_secret_key
-JWT_EXPIRATION=1h
-
-# Configuration Notifications
-FCM_SERVER_KEY=your_firebase_cloud_messaging_server_key
-
-# Mode de l'application
-NODE_ENV=development
+EMAIL_USER=votre_email
+EMAIL_PASS=votre_mot_de_passe_app
