--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,24 @@
-# Configuration Générale
+# Configuration Serveur
 NODE_ENV=development
 PORT=3000
 
 # Base de Données
-DATABASE_URL=postgresql://username:password@localhost:5432/sereko
+DATABASE_URL=postgresql://username:password@host:5432/database
 
-# Firebase
-FIREBASE_PROJECT_ID=sereko-api
-FIREBASE_PRIVATE_KEY=votre_clé_privée_firebase
-FIREBASE_CLIENT_EMAIL=firebase-adminsdk@sereko-api.iam.gserviceaccount.com
-
-# Wave Payment
-WAVE_API_KEY=votre_clé_api_wave
-WAVE_MERCHANT_ID=votre_identifiant_marchand
-WAVE_WEBHOOK_SECRET=votre_secret_webhook
-
-# Paystack (conservé pour référence)
-PAYSTACK_SECRET_KEY=votre_clé_secrète_paystack
-PAYSTACK_PUBLIC_KEY=votre_clé_publique_paystack
-
-# Authentification
+# Authentification JWT
 JWT_SECRET=votre_secret_jwt_tres_long_et_complexe
 
-# Email
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=votre_email
-EMAIL_PASS=votre_mot_de_passe_app
+# Configuration Firebase
+FIREBASE_PROJECT_ID=votre_project_id
+FIREBASE_PRIVATE_KEY=votre_private_key
+FIREBASE_CLIENT_EMAIL=votre_client_email
+
+# Configuration CORS
+CORS_ORIGIN=http://localhost:3000
+
+# Logging
+LOG_LEVEL=info
+
+# Sécurité
+RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_WINDOW_MS=15*60*1000  # 15 minutes
