--- a/package.json
+++ b/package.json
@@ -1,53 +1,41 @@
 {
-  "name": "sereko",
+  "name": "sereko-api",
   "version": "1.0.0",
-  "description": "Service marketplace platform connecting individuals with service providers in Côte d'Ivoire",
+  "description": "Backend API for Séréko platform",
   "main": "server.js",
   "scripts": {
-    "env:check": "node scripts/env-check.js",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'No build step needed'",
     "migrate": "node scripts/migrate.js",
     "test": "jest",
-    "test:coverage": "jest --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "husky install"
+    "prestart": "npm run migrate"
   },
   "keywords": [
-    "services",
-    "marketplace",
-    "côte d'ivoire",
-    "booking",
-    "saas"
+    "sereko",
+    "api",
+    "backend"
   ],
-  "author": "Séréko Team",
-  "license": "MIT",
+  "author": "Votre Nom",
+  "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.16.2",
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.40.1",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "firebase-admin": "^11.10.1",
-    "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.1",
-    "nodemailer": "^6.9.4",
-    "paystack": "^2.0.1",
-    "pg": "^8.11.1",
-    "winston": "^3.10.0"
+    "firebase-admin": "^11.11.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "eslint": "^8.57.1",
-    "husky": "^9.1.7",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "prisma": "^4.16.2",
-    "supertest": "^6.3.3"
+    "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   }
 }
