--- a/vercel.json
+++ b/vercel.json
@@ -4,26 +4,12 @@
     "builds": [
         { 
             "src": "server.js", 
-            "use": "@vercel/node",
-            "config": {
-                "includeFiles": [
-                    "src/**",
-                    "package.json"
-                ]
-            }
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         { 
-            "src": "/api/(.*)", 
-            "dest": "server.js" 
-        },
-        {
-            "src": "/health",
-            "dest": "server.js"
-        },
-        {
-            "src": "/(.*)",
+            "src": "/(.*)", 
             "dest": "server.js",
             "headers": {
                 "Access-Control-Allow-Origin": "*",
@@ -33,16 +19,7 @@
         }
     ],
     "env": {
-        "NODE_ENV": "production",
-        "DATABASE_URL": "@database_url",
-        "JWT_SECRET": "@jwt_secret",
-        "FIREBASE_PROJECT_ID": "@firebase_project_id",
-        "FIREBASE_PRIVATE_KEY": "@firebase_private_key",
-        "FIREBASE_CLIENT_EMAIL": "@firebase_client_email"
+        "NODE_ENV": "production"
     },
-    "regions": ["cdg1"],
-    "github": {
-        "enabled": true,
-        "autoDeploy": true
-    }
+    "regions": ["cdg1"]
 }
