--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
     "name": "sereko-api",
     "builds": [
         { 
-            "src": "server.js", 
+            "src": "api/index.js", 
             "use": "@vercel/node"
         }
     ],
     "routes": [
         { 
             "src": "/(.*)", 
-            "dest": "server.js",
+            "dest": "api/index.js",
             "headers": {
                 "Access-Control-Allow-Origin": "*",
                 "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
