--- a/vercel.json
+++ b/vercel.json
@@ -10,12 +10,17 @@
     "routes": [
         { 
             "src": "/(.*)", 
-            "dest": "api/index.js",
-            "headers": {
-                "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
-                "Access-Control-Allow-Headers": "Content-Type, Authorization"
-            }
+            "dest": "api/index.js"
+        }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                { "key": "Access-Control-Allow-Origin", "value": "*" },
+                { "key": "Access-Control-Allow-Methods", "value": "*" },
+                { "key": "Access-Control-Allow-Headers", "value": "*" }
+            ]
         }
     ],
     "env": {
