--- a/package.json
+++ b/package.json
@@ -1,41 +1,25 @@
 {
   "name": "sereko-api",
   "version": "1.0.0",
-  "description": "Backend API for Séréko platform",
+  "description": "API backend pour Séréko",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "migrate": "node scripts/migrate.js",
-    "test": "jest",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "prestart": "npm run migrate"
-  },
-  "keywords": [
-    "sereko",
-    "api",
-    "backend"
-  ],
-  "author": "Votre Nom",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "firebase-admin": "^11.11.0",
-    "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
-    "winston": "^3.11.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.56.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2"
+    "test": "echo 'Tests à implémenter'",
+    "lint": "eslint ."
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22",
+    "eslint": "^8.38.0"
   }
 }
