--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "helmet": "^7.0.0"
+    "helmet": "^7.0.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
