--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo 'Tests à implémenter'",
-    "lint": "eslint ."
+    "dev": "nodemon server.js"
   },
   "engines": {
     "node": ">=18.0.0"
