--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "API backend pour Séréko",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "/usr/local/bin/node server.js",
+    "dev": "nodemon server.js",
+    "postinstall": "npm run build",
+    "build": "echo 'Build completed'"
   },
   "engines": {
     "node": ">=18.0.0"
